[gd_scene load_steps=11 format=3 uid="uid://dbbvypfphwksj"]

[ext_resource type="Texture2D" uid="uid://6o0y52dm1hqi" path="res://Assets/art/farmingTilesheetComplete.png" id="1_3shnm"]
[ext_resource type="Script" path="res://Scripts/chicken.gd" id="1_pn7j7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_epc87"]
atlas = ExtResource("1_3shnm")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8hfn"]
atlas = ExtResource("1_3shnm")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_arsnd"]
atlas = ExtResource("1_3shnm")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0ibo"]
atlas = ExtResource("1_3shnm")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt32n"]
atlas = ExtResource("1_3shnm")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd7ng"]
atlas = ExtResource("1_3shnm")
region = Rect2(32, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bqd34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8hfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arsnd")
}],
"loop": true,
"name": &"eating",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0ibo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt32n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd7ng")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rted5"]
radius = 5.09902

[node name="chicken" type="CharacterBody2D"]
script = ExtResource("1_pn7j7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bqd34")
animation = &"walking"
frame_progress = 0.467269

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_rted5")

[node name="timers" type="Node" parent="."]

[node name="walking_timer" type="Timer" parent="timers"]
autostart = true

[node name="state_timer" type="Timer" parent="timers"]
autostart = true

[connection signal="timeout" from="timers/walking_timer" to="." method="_on_walking_timer_timeout"]
[connection signal="timeout" from="timers/state_timer" to="." method="_on_state_timer_timeout"]
